# NotificationSystem

./: README.md
email-service/: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  supabase_init.sql  test_assigned.py  test_e2e.py  test_email.py  test_returned.py  test_welcome.py
email-service/app/: config.py  main.py  models.py
email-service/app/api/: routes.py
email-service/app/core/: config.py  limiter.py  security.py
email-service/app/schemas/: email.py
email-service/app/services/: email.py  logger.py  worldtime.py
email-service/app/templates/: asset_assigned.html  asset_returned.html  welcome.html
email-service/app/templates/email/AssetManager/: asset_assigned.html  asset_returned.html  base.html  force_recall_new.html  force_recall_old.html
email-service/scratch/: test_cc.py  test_smtp.py
