[project]
name = "email-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "fastapi-mail[async]>=1.6.2",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
]
